[tool.poetry]
name = "taiga-stats"
version = "1.6.0"
description = "Generate statistics from Taiga and produce burnup diagrams, CFDs, dependency graphs and more."
authors = ["Erik Westrup <erik.westrup@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/erikw/taiga-stats"
keywords = ["taiga", "generator", "stats", "cfd", "dependency graph"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Software Development"
]
include = ["CHANGELOG.md", "LICENSE", "README.md"]


[tool.poetry.dependencies]
matplotlib = "^3.10"
python = "^3.11, < 3.13" 
python-taiga = "^1.0.0"
single-source = ">=0.2,<0.4"
packaging = "^24.2" # Pinned for matplotlib and mkdocs. If not pinned, build on travis fails, but not locally.

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
autoimport = "^0.11"
black = "^22.1"
pylint = "^2.13.9"
ipdb = "^0.13"
isort = "^5.9"
mkdocs = "1.6.0"  # Keep this in sync with docs/requirements.txt used by .readthedocs.yaml
pyyaml = "^6.0.2" # Pin this dependency of mkdocs as 6.0.2 fixes build issue with deprecated openssl https://github.com/urllib3/urllib3/issues/2168. Remove this line once mkdocs uses this version or higher of pyyaml.
pudb = "^2021.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# By defining this, we can run
# $ poetry run taiga-stats
# instead of the longer
# $ poetry run python -m taiga_stats
# This short name will also be the name of the script being installed to the system when installing the wheel from pip.
# NOTE python modules should use underscores, python packages not (PEP8)...
taiga-stats = 'taiga_stats.__main__:main'

[tool.isort]
line_length = 160

[tool.black]
line_length = 160

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 160
disable = "C0103, C0114, C0116, C0200, C0209, C0413, R0903, R0912, R0914, R0915, R1710, W1308"
